@@ -121,11 +121,6 @@
                     HintPath = "..\..\build\net-1.1\debug\Castle.Components.Common.TemplateEngine.dll"
                 />
                 <Reference
-                    Name = "Castle.Components.Common.EmailSender.SmtpEmailSender"
-                    AssemblyName = "Castle.Components.Common.EmailSender.SmtpEmailSender"
-                    HintPath = "..\..\build\net-1.1\debug\Castle.Components.Common.EmailSender.SmtpEmailSender.dll"
-                />
-                <Reference
                     Name = "Castle.Components.Common.EmailSender"
                     AssemblyName = "Castle.Components.Common.EmailSender"
                     HintPath = "..\..\build\net-1.1\debug\Castle.Components.Common.EmailSender.dll"
