@@ -82,10 +82,6 @@
       <Name>Castle.Components.Common.EmailSender</Name>
       <HintPath>..\..\build\net-2.0\debug\Castle.Components.Common.EmailSender.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Components.Common.EmailSender.SmtpEmailSender">
-      <Name>Castle.Components.Common.EmailSender.SmtpEmailSender</Name>
-      <HintPath>..\..\build\net-2.0\debug\Castle.Components.Common.EmailSender.SmtpEmailSender.dll</HintPath>
-    </Reference>
     <Reference Include="Castle.Components.Common.TemplateEngine">
       <Name>Castle.Components.Common.TemplateEngine</Name>
       <HintPath>..\..\build\net-2.0\debug\Castle.Components.Common.TemplateEngine.dll</HintPath>
