@@ -29,7 +29,6 @@
 				<include name="Castle.Components.Common.TemplateEngine.dll" />
 				<include name="Castle.Components.Common.TemplateEngine.NVelocityTemplateEngine.dll" />
 				<include name="Castle.Components.Common.EmailSender.dll" />
-				<include name="Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 				<include name="log4net.dll" />
 				<include name="NVelocity.dll" />
 				<include name="Castle.ActiveRecord.dll" />
@@ -85,7 +84,6 @@
 				<include name="${bin2.dir}/Castle.Components.Common.TemplateEngine.dll" />
 				<include name="${bin2.dir}/Castle.Components.Common.TemplateEngine.NVelocityTemplateEngine.dll" />
 				<include name="${bin2.dir}/Castle.Components.Common.EmailSender.dll" />
-				<include name="${bin2.dir}/Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 			</references>
 		</csc>
 		<copy todir="../bin">
