@@ -17,7 +17,6 @@
 			<include name="Castle.Core.dll" />
 			<include name="Castle.Components.Binder.dll" />
 			<include name="Castle.Components.Common.EmailSender.dll" />
-			<include name="Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 			<include name="Castle.MonoRail.Framework.dll" />
 		</assemblyfileset>
 
