@@ -19,7 +19,6 @@
 			<include name="Castle.Core.dll" />
 			<include name="Castle.Components.Binder.dll" />
 			<include name="Castle.Components.Common.EmailSender.dll" />
-			<include name="Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 			<include name="Castle.ActiveRecord.dll" />
 			<include name="Castle.MonoRail.Framework.dll" />
 			<include name="Castle.MonoRail.ActiveRecordSupport.dll" />
