@@ -18,7 +18,6 @@
 			<include name="Castle.Core.dll" />
 			<include name="Castle.Components.Binder.dll" />
 			<include name="Castle.Components.Common.EmailSender.dll" />
-			<include name="Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 			<include name="Nullables.dll" />
 			<include name="Commons.dll" />
 			<include name="log4net.dll" />
