@@ -24,7 +24,6 @@
 			<include name="NVelocity.dll" />
 			<include name="Castle.Components.Binder.dll" />
 			<include name="Castle.Components.Common.EmailSender.dll" />
-			<include name="Castle.Components.Common.EmailSender.SmtpEmailSender.dll" />
 			<include name="log4net.dll" />
 		</assemblyfileset>
 
